--- a/templates/request_viewer/home.html.twig
+++ b/templates/request_viewer/home.html.twig
@@ -1,10 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}MRequest{% endblock %}
+{% block page_title %}MRequest{% endblock %}
 
 {% block body %}
-
-    <h1>MRequest</h1>
-    <div class="text-center"><a class="btn btn-primary btn-lg" href="{{ path('bin_create') }}">Create Bin</a></div>
-
+    <div class="text-center"><a class="btn btn-primary btn-lg" href="{{ path('bin_create') }}">Create Request Bin</a></div>
 {% endblock %}
