--- a/templates/request_viewer/view.html.twig
+++ b/templates/request_viewer/view.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}MRequest: Bin {{ bin.extId }}{% endblock %}
+{% block title %}MRequest - Requet Bin: {{ bin.extId }}{% endblock %}
 
-{% block page_title %}Bin {{ bin.extId }}{% endblock %}
+{% block page_title %}Request Bin: {{ bin.extId }}{% endblock %}
 
 {% block body %}
     <h4><strong>URL:</strong> {{ viewUrl }}</h4>
